--- a/meeting-service.properties
+++ b/meeting-service.properties
@@ -1,5 +1,5 @@
 server.port=${PORT:8000}
-meeting-message=Hello World!
+meeting-message=Another Hello World!
 
 # define the destination to which the input MessageChannel should be bound
 spring.cloud.stream.bindings.input.destination = meetings
