--- a/meeting-client.properties
+++ b/meeting-client.properties
@@ -1,6 +1,7 @@
 server.port=${PORT:9999}
 
 spring.cloud.stream.bindings.output.destination=meetings
+spring.cloud.stream.bindings.output.group=meetings-group
 
 security.oauth2.resource.userInfoUri=http://localhost:9191/uaa/user
 
